# abacus

./: .gitignore  .prettierignore  404.html  LICENSE  README.md  README.old.md  abacus-help.txt  abacus.sh  accounting.md  app.py  app_reminder.py  call.py  chart.json  cli.sh  db.sqlite  end_balances.json  entries.json  entries.linejson  example.py  experimental.py  fga.md  index.html  justfile  minimal.bat  minimal.py  minimal.sh  mkdocs.yml  objects.inv  playground.py  pylintrc  pyproject.toml  readme.bat  readme.py  readme.sh  release_goals.md  requirements.txt  sitemap.xml  starting_balances.json  store.json  streamlit.py  (+4 more)
abacus/: TODO  __init__.py  _chart.py  accounting.py  accounting_types.py  accounts.py  accumulation.py  api.py  base.py  book.py  bx.py  chart.py  chart.sh  cli.py  cli0.py  closing.py  closing_types.py  column_builder.py  core.py  delete.py  entries_store.py  example.py  formatting.py  from_core.py  jaba.py  journal.py  ledger.py  named_entries.py  nameit.py  names.py  naming.py  pipeline.py  report.sh  reports.py  shortcodes.py  show.py  show_rich.py  store.py  tables.py  test_base.py  (+7 more)
abacus0/: __init__.py  viewers0.py
abacus_depr/: accounts.py  book.py  bx.py  chart.py  closing.py  ledger.py  reports.py  shortcodes.py  tables.py
about/: similar.md
app/: _app.py
cli-example/: abacus.toml  balances.json  call.py  chart.json  end_balances.json  entries.json  example.sh  minimal.bat  minimal.py  minimal.sh  store.json
core/: api.py  experimental.py  test_uncore.py  uncore.py
demo/: chart.bat  cli.bat  entries.json  ledger.bat  names.json  operations.bat  show.bat  start.json
docs/: .pages  L_README.md  README.old.md  _index.py  abacus.md  abacus.rst  accounting.md  accounting2.md  base.md  chart_of_accounts.md  cli.md  conf.py  core.md  echo.py  entries_store.md  examples.md  index.bat  index.md  index.py  index.rst  install.md  ktc_example.md  personas.md  quick_start.bat  quick_start.md  quick_start.py  quotes.md  reference.md  rules.md  similar.md  starting_balances.json  textbook.md  typer_cli.app.md  typer_cli.base.md  typer_cli.chart.md  typer_cli.ledger.md  typer_cli.md  typer_cli.post.md  typer_cli.show.md  user_chart.md  (+2 more)
docs0/: accounting.md  feedback.md  ktc_example.md  readme_part_2.md  readme_parts_1.md
experimental/: TODO  __chart.py  abacus.py  abc.toml  accounting.md  accounts.py  all.sh  api.py  balances.json  base.py  c.py  chart.py  chart.sh  chart_command.py  cli.md  cli.py  cli_CLICK.py  closing.py  composer.py  conftest.py  cx.py  defg.py  docopt.py  engine.py  entries.csv  entries.py  events.py  example.as  extra.py  injest.py  jaba.py  jobs.txt  ledger.py  ledger.sh  mapping.py  min.py  multiple_entry.py  name.py  name2.py  paths.py  (+22 more)
helper/: codeblock.py  test_codeblock.py
hooks/: pyproject.py
playground/: abacus.py  api.py  chart_api.py  core.py  db.py  db.sqlite  entries.json  entries_store.py  example.py  example_core.py  example_mini.py  example_ui.py  hook.py  mini.py  old_chart.txt  pass.py  readme.py  run.sh  test_core.py  test_mini.py  test_playground.py  test_ui.py  ui.py  unit.py  uuii.py
quick_start/: index.html
reference/: index.html
(+243 files in other folders)
