[tool.isort]
skip_gitignore = true

[tool.ruff]
ignore=['E501', 'E741']
extend-exclude=["minimal.py"]

[tool.poetry]
name = "abacus-py"
version = "0.7.0"
description = "A minimal, yet valid double-entry accounting system in Python."
authors = ["Evgeniy Pogrebnyak <e.pogrebnyak@gmail.com>"]
readme = "README.md"
packages = [
    {include = "abacus"}
]

[tool.poetry.scripts]
bx = 'abacus.api:main'
cx = 'abacus.experimental.cx:main'

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.3.5"
pydantic = "^1.10.8"
docopt = "^0.6.2"
types-docopt = "^0.6.11.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pyright = "^1.1.306"
ruff = "^0.0.265"
mkdocs-material = "^9.1.9"
mkdocstrings = {extras = ["python"], version = "^0.21.2"}
isort = "^5.12.0"
black = "^23.3.0"
pytest-console-scripts = "^1.4.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
