[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests",
    "unit: unit tests",
    "regression: something was wrong and got fixed",
    "callable: tesk function or method invocation, but not the result"  
]
addopts = "--noconftest --ignore-glob=tests0/"

[tool.isort]
skip_gitignore = true

[tool.ruff]
ignore=['E501', 'E741']
extend-exclude=["minimal.py"]

[tool.poetry]
name = "abacus-py"
version = "0.8.3"
description = "A minimal, yet valid double-entry accounting system in Python."
authors = ["Evgeniy Pogrebnyak <e.pogrebnyak@gmail.com>"]
readme = "README.md"
packages = [
    {include = "abacus"}
]

[tool.poetry.scripts]
buh = 'abacus.cli:cx'
abacus = 'abacus.cli:cx'


[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.3.5"
pydantic = "^1.10.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
ruff = "^0.0.265"
isort = "^5.12.0"
black = "^23.3.0"
mypy = "^1.3.0"
mkdocs-material = "^9.1.9"
mkdocstrings = {extras = ["python"], version = "^0.21.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
